fixed text-overflow issues

--- a/src/styles/education.css
+++ b/src/styles/education.css
@@ -16,6 +16,7 @@
 .education-container .degree{
     font-size: 30px;
     color:rgb(70, 60, 60);
+    word-wrap: break-word;
 }
 .education-container .school-name{
     font-size: 20px;
